[gd_scene load_steps=5 format=3 uid="uid://b14wrf4f63rga"]

[ext_resource type="Script" path="res://scenes/characters/tank.gd" id="1_0aut4"]
[ext_resource type="Texture2D" uid="uid://462vx4bqi7x8" path="res://resources/graphics/tank/tank_hull.png" id="1_tv1di"]
[ext_resource type="PackedScene" uid="uid://jw2ytwab6t3x" path="res://scenes/characters/turret.tscn" id="4_5yvhr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1h0xl"]

[node name="Tank" type="CharacterBody2D"]
collision_mask = 61
script = ExtResource("1_0aut4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(9.86175, 6.36)
shape = SubResource("RectangleShape2D_1h0xl")

[node name="Hull" type="Sprite2D" parent="."]
texture = ExtResource("1_tv1di")

[node name="Turret" parent="." instance=ExtResource("4_5yvhr")]

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="MainGunReloadTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SecondaryGunReloadTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[connection signal="ap" from="Turret" to="." method="_on_turret_ap"]
[connection signal="he" from="Turret" to="." method="_on_turret_he"]
[connection signal="timeout" from="MainGunReloadTimer" to="." method="_on_main_gun_reload_timer_timeout"]
[connection signal="timeout" from="SecondaryGunReloadTimer" to="." method="_on_main_gun_reload_timer_timeout"]
[connection signal="timeout" from="SecondaryGunReloadTimer" to="." method="_on_secondary_gun_reload_timer_timeout"]
